--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <li>ほげほげ</li>
      <li>ほにゃらら</li>
  </ol>
-
+<h1>練習問題2.3</h1>
 <dl>
 <dt>作者</dt>
 <dd>ジョン</dd>
@@ -42,6 +42,7 @@
 <dd>ボーナスポイントとして２０ポイント加算されます。</dd>
 <dt>それ以外の場合</dt><dd>ポイントは加算されません。</dd>
 </dl> 
+<h1>練習問題2.4</h1>
 <table>
 <caption>
 <strong>お寿司をどこで食べるか？その長所と短所</strong>
