--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
                 <h1>Hello World</h1>
 
  <!--文字の大きさの練習-->
+<dr>
+<dr>
 <h1>練習問題2.2</h1>
 <h1>Hello World</h1>
  <h2>Hello World</h2>
@@ -17,6 +19,8 @@
      <li>ほげほげ</li>
      <li>ほにゃらら</li>
  </ol>
+<dr>
+<dr>
 <h1>練習問題2.3</h1>
 <dl>
 <dt>作者</dt>
@@ -42,6 +46,8 @@
 <dd>ボーナスポイントとして２０ポイント加算されます。</dd>
 <dt>それ以外の場合</dt><dd>ポイントは加算されません。</dd>
 </dl> 
+<dr>
+<dr>
 <h1>練習問題2.4</h1>
 <table>
 <caption>
@@ -69,6 +75,9 @@
 <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが解凍もの、休みの日は混む</td></tr>
 </tbody>
 </table>
+<dr>
+<dr>
+<h1>練習問題2.5</h1>
 <ul>
 <li>参考資料を調べ、次のように表示されるHTMLを書きなさい。<p style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 <br /> 
