--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p> 
 </li> 
 </ul>
-  <title>練習問題2.6</title>
+  <h1>練習問題2.6</h1>
   <p>テキスト入力：<input type="text"></p>
 </body>
 </html>
