--- a/index.html
+++ b/index.html
@@ -85,8 +85,13 @@
 <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p> 
 </li> 
 </ul>
+<br>
+<br>
   <h1>練習問題2.6</h1>
   <p>テキスト入力：<input type="text"></p>
+<br>
+<br>
+<h1>練習問題2.7<h1>
 <form action="xxx.php" method="post"><label>メール（type="email"）:<input type="email" name="email"></label><input type="submit" value="送信"></form>
 <br>
 <form action="xxx.php" method="post"><label>URL（type="url"）:<input type="url" name="url"></label><input type="submit" value="送信"></form>
