--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <table>
 <caption>
 <strong>お寿司をどこで食べるか？その長所と短所</strong>
-</caption><thead><tr><th>どこで食べるか</th><th>長所</th><th>短所</th></tr>
+</caption><thead><tr><th>どこで食べるか</th><th class="important">長所</th><th>短所</th></tr>
 </thead>
 <tbody>
 <tr><th>銀座の高級店</th><td>ネタにこだわり、技術が素晴らしい</td><td>値段が時価で不安、予約が必要</td></tr>
@@ -174,11 +174,11 @@
 <a href="a.html" target="_parent">ひとつ上の親フレームにリンクします</a><br>
 <a href="a.html" target="_top">フレームをすべて解除してリンクします</a><br>
 <a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
-
+<br>
+<br>
+<h1>練習問題3.3</h1>
 <a  href="#abc">abcと名前を付けた場所へリンクします</a><br>
- 
-<a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
-    
+<a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>    
 <br>
 <br>
 <h1>練習問題3.4</h1>
