--- a/index.html
+++ b/index.html
@@ -210,5 +210,11 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav> 
+<head>
+<meta charset="UTF-8">
+<title>Web開発の練習１</title>
+<link rel="stylesheet"href="mystyle.css">
+<script src="myjs.js"></script><!--この行を追加-->
+</head>
 </body>
     </html>
