--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav> 
+<h1>イベントハンドラの練習</h1>
+<input type="button"value="ここをクリック”ondblclick="alert('Hello,Osamu!');">
 </head>
 </body>
     </html>
