--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 </ul>
 </nav> 
 <h1>イベントハンドラの練習</h1>
-<input type="button"value="ここをクリック”ondblclick="alert('Hello,Osamu!');">
+<input type="button"value="ここをクリック"ondblclick="alert('Hello,Kanami!');">
 </head>
 </body>
     </html>
